--- a/HomePage.html
+++ b/HomePage.html
@@ -16,7 +16,7 @@
                 <a href="">HOME</a>
                 <a href="">PROFILE</a>
                 <a href="">ABOUT US</a>
-                <a href="">CONTACTS</a>
+                <a href="">CONTACT US</a>
                 <a href="">SIGN UP</a>
             </nav>
         </header>
