--- a/log.html
+++ b/log.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="login">
+        <h1>log in</h1>
+        <form >
+        <label>Gmail</label>
+        <input type="email" placeholder="Enter Email">
+        <label>password</label>
+        <div class="Pass">
+        
+        <input type="password" placeholder="Enter password" >
+        <!-- <img src="./css/Eye.png" alt=""> -->
+        </div>
+        <input type="submit">
+        <p>Create account?<a href="./index.html">Sign up</a></p>
+        </form>
+    </div>
 
+</body>
+</html>
