--- a/log.html
+++ b/log.html
@@ -19,7 +19,7 @@
         <!-- <img src="./css/Eye.png" alt=""> -->
         </div>
         <input type="submit">
-        <p>Create account?<a href="./index.html">Sign up</a></p>
+        <p>Create account?<a href="sign-up.html">Sign up</a></p>
         </form>
     </div>
 
