--- a/sign-up.html
+++ b/sign-up.html
@@ -40,7 +40,7 @@
                     <input type="submit" value="submit">
                     <input type="reset" value="Delete">                
                 <p>
-                    Already have account?<a href="./login.html">log in</a>
+                    Already have account?<a href="log.html">log in</a>
                 </p>
         </form>
     </div>
