--- a/log.html
+++ b/log.html
@@ -7,15 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="login">
+    <div class="container">
         <h1>log in</h1>
         <form >
-        <label>Gmail</label>
-        <input type="email" placeholder="Enter Email">
-        <label>password</label>
+        <label class="email">Gmail</label>
+        <input type="email" placeholder="Enter Email" id="email" required>
+        <label class="password">password</label>
         <div class="Pass">
-        
-        <input type="password" placeholder="Enter password" >
+        <input type="password" placeholder="Enter password" id="password" required>
         <!-- <img src="./css/Eye.png" alt=""> -->
         </div>
         <input type="submit">
