--- a/log.html
+++ b/log.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./log.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
         <!-- <img src="./css/Eye.png" alt=""> -->
         </div>
         <input type="submit">
-        <p>Create account?<a href="./index.html">Sign up</a></p>
+        <p>Create account?<a href="./sign-up.html">Sign up</a></p>
         </form>
     </div>
 
