--- a/sign-up.html
+++ b/sign-up.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./sign-up.css">
 </head>
 <body>
     <div class="sing_up">
@@ -40,7 +40,7 @@
                     <input type="submit" value="submit">
                     <input type="reset" value="Delete">                
                 <p>
-                    Already have account?<a href="./login.html">log in</a>
+                    Already have account?<a href="./log.html">log in</a>
                 </p>
         </form>
     </div>
