--- a/log.html
+++ b/log.html
@@ -10,15 +10,12 @@
     <div class="container">
         <h1>log in</h1>
         <form >
-        <label class="email">Gmail</label>
-        <input type="email" placeholder="Enter Email" id="email" required>
-        <label class="password">password</label>
-        <div class="Pass">
-        <input type="password" placeholder="Enter password" id="password" required>
-        <!-- <img src="./css/Eye.png" alt=""> -->
-        </div>
-        <input type="submit">
-        <p>Create account?<a href="sign-up.html">Sign up</a></p>
+            <input type="email" placeholder="Enter Email" id="email" required>
+            <label class="email">Gmail</label>
+            <input type="password" placeholder="Enter password" id="password" required>
+            <label class="password">password</label>
+            <button>log in</button>
+            <p>Create account?<a href="sign-up.html">Sign up</a></p>
         </form>
     </div>
 
