--- a/log.html
+++ b/log.html
@@ -10,10 +10,10 @@
     <div class="container">
         <h1>log in</h1>
         <form >
-            <input type="email" placeholder="Enter Email" id="email" required>
-            <label class="email">Gmail</label>
-            <input type="password" placeholder="Enter password" id="password" required>
-            <label class="password">password</label>
+            <input type="email" name="email" id="email" placeholder=" " required><br>
+            <label class="email">Gmail</label><br>
+            <input type="password" name="password" id="password" placeholder=" " required><br>
+            <label class="password">password</label><br>
             <button>log in</button>
             <p>Create account?<a href="sign-up.html">Sign up</a></p>
         </form>
