--- a/log.html
+++ b/log.html
@@ -16,6 +16,7 @@
             <label class="password">password</label><br>
             <button>log in</button>
             <p>Create account?<a href="sign-up.html">Sign up</a></p>
+            <a href="" class="forget">forget password</a>
         </form>
     </div>
 
