--- a/log.html
+++ b/log.html
@@ -11,9 +11,9 @@
         <h1>log in</h1>
         <form >
             <input type="email" name="email" id="email" placeholder=" " required><br>
-            <label class="email">Gmail</label><br>
+            <label for="email" class="email">Gmail</label><br>
             <input type="password" name="password" id="password" placeholder=" " required><br>
-            <label class="password">password</label><br>
+            <label for="password" class="password">password</label><br>
             <button>log in</button>
             <p>Create account?<a href="sign-up.html">Sign up</a></p>
             <a href="" class="forget">forget password</a>
