--- a/log.html
+++ b/log.html
@@ -10,10 +10,22 @@
     <div class="container">
         <h1>log in</h1>
         <form >
-            <input type="email" name="email" id="email" placeholder=" " required><br>
+            <input 
+            type="email"
+            name="email" 
+            id="email" 
+            placeholder=" " 
+            required><br>
             <label for="email" class="email">Gmail</label><br>
-            <input type="password" name="password" id="password" placeholder=" " required><br>
+            <input 
+            type="password" 
+            name="password" 
+            id="password" 
+            placeholder=" " 
+            required><br>
             <label for="password" class="password">password</label><br>
+            <input type="checkbox" id="checkbox" name="remeber-Pass">
+            <label for="checkbox" class="checkbox">remeber me</label>
             <button>log in</button>
             <p>Create account?<a href="sign-up.html">Sign up</a></p>
             <a href="" class="forget">forget password</a>
