--- a/log.html
+++ b/log.html
@@ -38,6 +38,19 @@
             <p>Create account?<a href="sign-up.html" class="sign-up">Sign up</a></p>
         </form>
     </div>
+    <!-- Circles for design -->
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
+    <div class="circle4"></div>
+    <div class="circle5"></div>
+    <div class="circle6"></div>
+    <div class="circle7"></div>
+    <div class="circle8"></div>
+    <div class="circle9"></div>
+    <div class="circle10"></div>
+    <div class="circle11"></div>
+    <div class="circle12"></div>
 
 </body>
 </html>
