animation on login

--- a/log.html
+++ b/log.html
@@ -39,9 +39,11 @@
         </form>
     </div>
     <!-- Circles for design -->
+    <div class="c-1-2-3">
     <div class="circle1"></div>
     <div class="circle2"></div>
     <div class="circle3"></div>
+    </div>
     <div class="circle4"></div>
     <div class="circle5"></div>
     <div class="circle6"></div>
