finish of css of log in

--- a/log.html
+++ b/log.html
@@ -44,15 +44,20 @@
     <div class="circle2"></div>
     <div class="circle3"></div>
     </div>
+    <div class="c-4-5-6">
     <div class="circle4"></div>
     <div class="circle5"></div>
     <div class="circle6"></div>
+    </div>
+    <div class="c-7-8-9">
     <div class="circle7"></div>
     <div class="circle8"></div>
     <div class="circle9"></div>
+    </div>
+    <div class="c-10-11-12">
     <div class="circle10"></div>
     <div class="circle11"></div>
     <div class="circle12"></div>
-
+    </div>
 </body>
 </html>
