--- a/log.html
+++ b/log.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>log in</h1>
-        <form >
+        <form method="get">
             <!-- email-->
             <input 
             type="email"
