--- a/log.html
+++ b/log.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>dream resturant</h1>
     <div class="container">
-        <h1>log in</h1>
+        <h2>log in</h2>
         <form method="get">
             <!-- email-->
             <input 
