--- a/log.html
+++ b/log.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="log.css">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awsome/6.5.0/css/all.min.css">
 </head>
 <body>
     <h1>dream resturant</h1>
