--- a/log.html
+++ b/log.html
@@ -11,7 +11,7 @@
     <h1>dream resturant</h1>
     <div class="container">
         <h2>log in</h2>
-        <form method="get">
+        <form method="post">
             <!-- email-->
             <input 
             type="email"
