--- a/ContactUS.html
+++ b/ContactUS.html
@@ -54,6 +54,7 @@
         <!-- submit button -->
         <button id="submit" value="submit">submit</button>
     </form>
+    <div class="space">-</div>
 
 </body>
 </html>
