--- a/about.html
+++ b/about.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>About Us</title>
+    <link rel="stylesheet" href="about.css">
+</head>
+<body>
+    <div class="container">
+    <h1>About Us</h1>
+    <p>
+    We are a team of eight people who decided to create this page as our first step toward success.
+    We wanted to start by opening a modest restaurant to meet people's needs.
+    </p>
+    <p><strong>Team members:</strong></p>
+    <ul>
+    <li>Abdallah Mohamed Essam</li>
+    <li>Ahmed Ayman Samhan</li>
+    <li>Abdallah Yehia Raheem</li>
+    <li>Osama Hasan Gad Elkarem</li>
+    <li>Ahmed Amer Amer</li>
+    <li>Mohamed Hussein Mohamed</li>
+    <li>Omar Tamer Mohamed</li>
+    <li>Mostafa Hamed Kamel</li>
+    </ul>
+    </div>
+</body>
+</html>
