--- a/log.html
+++ b/log.html
@@ -39,9 +39,12 @@
         </form>
     </div>
     <!-- Circles for design -->
-    <div class="circle1"></div>
-    <div class="circle2"></div>
-    <div class="circle3"></div>
+
+        <!-- <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+ -->
+
     <div class="circle4"></div>
     <div class="circle5"></div>
     <div class="circle6"></div>
