--- a/about.html
+++ b/about.html
@@ -2,27 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Us</title>
+    <meta name="resturant" content="home page">
+    <meta name="viewport" content="width= device - width , initial - scale = 1.0">
     <link rel="stylesheet" href="about.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&family=Varela+Round&display=swap" rel="stylesheet">
+    <title>about US</title>
 </head>
 <body>
-    <div class="container">
-    <h1>About Us</h1>
-    <p>
-    We are a team of eight people who decided to create this page as our first step toward success.
-    We wanted to start by opening a modest restaurant to meet people's needs.
-    </p>
-    <p><strong>Team members:</strong></p>
-    <ul>
-    <li>Abdallah Mohamed Essam</li>
-    <li>Ahmed Ayman Samhan</li>
-    <li>Abdallah Yehia Raheem</li>
-    <li>Osama Hasan Gad Elkarem</li>
-    <li>Ahmed Amer Amer</li>
-    <li>Mohamed Hussein Mohamed</li>
-    <li>Omar Tamer Mohamed</li>
-    <li>Mostafa Hamed Kamel</li>
-    </ul>
+
+    <nav class="navbar">
+        <header class="navdiv">
+            <div class="logo"><a href="#">Dream resturant</a></div> logo 
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">MENU</a></li>
+                <li><a href="#">PROFILE</a></li>    
+                <li><a href="#">ABOUT US</a></li> 
+                <li><a href="#">CONTACT US</a></li>     
+                <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
+                <button class="button_login"><a href="log.html">log-in</a></button>  
+            </ul>
+        </header>
+    </nav>
+    
+    <div class="home">
+        <div class="open_lay">
+            <div class="container">
+                <div class="descr">
+                    <div class="name">
+                        <h1>About us</h1>
+                    </div> 
+                        <h4> We are a team of eight people who decided to create this page as our first step toward success.
+                          We wanted to start by opening a modest restaurant to meet people's needs. </h4>
+                          <h5>Team members:</h5>
+                          <ul>
+                            <li>Abdallah Mohamed Essam</li><br>
+                            <li>Ahmed Ayman Samhan</li><br>
+                            <li>Abdallah Yehia Raheem</li><br>
+                            <li>Osama Hasan Gad Elkarem</li><br>
+                            <li>Ahmed Amer Amer</li><br>
+                            <li>Mohamed Hussein Mohamed</li><br>
+                            <li>Omar Tamer Mohamed</li><br>
+                            <li>Mostafa Hamed Kamel</li><br>
+                          </ul>
+                </div>
+            </div>
+
+        </div>
+
     </div>
-</body>
-</html>
