--- a/menu.html
+++ b/menu.html
@@ -1,1 +1,123 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="menu.css">
+    <title>Menu</title>
+</head>
+<body>
+    <div>
+    <nav class="navbar">
+        <header class="navdiv">
+            <div class="logo"><a href="#">Dream resturant</a></div> <!-- logo -->
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">MENU</a></li>
+                <li><a href="#">PROFILE</a></li>    
+                <li><a href="#">ABOUT US</a></li> 
+                <li><a href="#">CONTACT US</a></li>     
+                <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
+                <button class="button_login"><a href="log.html">log-in</a></button>  
+            </ul>
+        </header>
+    </nav>
+    </div>
+
+    <section class="products"> 
+        <div class="container">
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="Dish3.avif" alt="Eror">
+              </div>
+                <div class="product_item_image_description">
+                    <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
+                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p> 
+                    <br>
+                        <details><summary>More.</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </details>
+                        <br><a href="#">BUY</a>
+                        <br><a href="#">Add in packet</a>
+                </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="Dish3.avif" alt="Eror">
+              </div>  
+              <div class="product_item_image_description">
+                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
+                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                    <br>
+                        <details><summary>More.</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </details>
+                        <br><a href="#">BUY</a>
+                        <br><a href="#">Add in packet</a>
+              </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="Dish3.avif" alt="Eror">
+              </div>
+              <div class="product_item_image_description">
+                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
+                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                    <br>
+                        <details><summary>More.</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </details>
+                        <br><a href="#">BUY</a>
+                        <br><a href="#">Add in packet</a>
+             </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="Dish3.avif" alt="Eror">
+              </div>
+              <div class="product_item_image_description">
+                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
+                    <p>Lorem ipsum dolor sit amet.<br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                    <br>
+                        <details><summary>More.</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </details>
+                        <br><a href="#">BUY</a>
+                        <br><a href="#">Add in packet</a>
+             </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="Dish3.avif" alt="Eror">
+              </div>
+              <div class="product_item_image_description">
+                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
+                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                    <br>
+                        <details><summary>More.</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </details>
+                        <br><a href="#">BUY</a>
+                        <br><a href="#">Add in packet</a>
+            </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="Dish3.avif" alt="Eror">
+            </div>
+              <div class="product_item_image_description">
+                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
+                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                    <br>
+                        <details><summary>More.</summary>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </details>
+                        <br><a href="#">BUY</a>
+                        <br><a href="#">Add in packet</a>
+             </div>
+            </div>
+        </div>
+    </section>  
+</body>
+</html>
 
