--- a/ContactUS.html
+++ b/ContactUS.html
@@ -55,6 +55,6 @@
         <button id="submit" value="submit">submit</button>
     </form>
     <div class="space">-</div>
-
+    <script src="contact.js"></script>
 </body>
 </html>
