--- a/log.html
+++ b/log.html
@@ -8,7 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awsome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <h1>dream resturant</h1>
+    <div class="background">
+        <nav class="navbar">
+            <header class="navdiv">
+                <div class="logo"><a href="HomePage.html">Dream resturant</a></div> <!-- logo -->
+                <ul>
+                    <li><a href="HomePage.html">HOME</a></li>
+                    <li><a href="#">MENU</a></li>
+                    <li><a href="#">PROFILE</a></li>    
+                    <li><a href="about.html">ABOUT US</a></li> 
+                    <li><a href="ContactUS.html">CONTACT US</a></li>     
+                    <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
+                    <button class="button_login"><a href="log.html">log-in</a></button>  
+                </ul>
+            </header>
+        </nav></div>
     <div class="container">
         <h2>log in</h2>
         <form method="post">
@@ -40,19 +54,6 @@
             <p>Create account?<a href="sign-up.html" class="sign-up">Sign up</a></p>
         </form>
     </div>
-    <!-- Circles for design -->
-    <div class="circle1"></div>
-    <div class="circle2"></div>
-    <div class="circle3"></div>
-    <div class="circle4"></div>
-    <div class="circle5"></div>
-    <div class="circle6"></div>
-    <div class="circle7"></div>
-    <div class="circle8"></div>
-    <div class="circle9"></div>
-    <div class="circle10"></div>
-    <div class="circle11"></div>
-    <div class="circle12"></div>
 
 </body>
 </html>
