--- a/HomePage.html
+++ b/HomePage.html
@@ -19,11 +19,11 @@
         <header class="navdiv">
             <div class="logo"><a href="#">Dream resturant</a></div> <!-- logo -->
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">MENU</a></li>
+                <li><a href="HomePage.html">HOME</a></li>
+                <li><a href="menu.html">MENU</a></li>
                 <li><a href="#">PROFILE</a></li>    
-                <li><a href="#">ABOUT US</a></li> 
-                <li><a href="#">CONTACT US</a></li>     
+                <li><a href="about.html">ABOUT US</a></li> 
+                <li><a href="ContactUS.html">CONTACT US</a></li>     
                 <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
                 <button class="button_login"><a href="log.html">log-in</a></button>  
             </ul>
@@ -47,6 +47,7 @@
 
         </div>
     </div>
-    
-
+    <script src="main.js"></script>
+</body>    
+</html>
         
