--- a/sign-up.html
+++ b/sign-up.html
@@ -50,7 +50,7 @@
         </div>
         <div class="group">
             <label for="g">Email</label>
-            <input id="g" required  type="email" name="email" minlength="10" maxlength="20" placeholder="">
+            <input id="g" required  type="email" name="email" minlength="10" maxlength="20" placeholder="Email">
         </div>
         <div class="group">
             <label for="p">Password</label>
