--- a/sign-up.html
+++ b/sign-up.html
@@ -43,7 +43,8 @@
         </div>
         <div class="group" >
             <label for="gender">gender</label>
-            <select required name="gender" id="gender" >
+            <select required name="gender" id="gender">
+                <option value="gender" hidden>gender</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
             </select>
