--- a/sign-up.html
+++ b/sign-up.html
@@ -71,5 +71,6 @@
         <br> Already Have An Acount? <a href="log.html">Log In</a>
     </div>   
     </div>
+    <script src="sign-up.js"></script>
     </body>
 </html>
