--- a/Cart.html
+++ b/Cart.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./Cart.css">
+    <link rel="stylesheet" href="Cart.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+    <nav class="navbar">
+        <header class="navdiv">
+            <div class="logo"><a href="#">Dream resturant</a></div> <!-- logo -->
+            <ul>
+                <li><a href="HomePage.html">HOME</a></li>
+                <li><a href="menu.html">MENU</a></li>
+                <li><a href="Cart.html">CART</a></li>    
+                <li><a href="about.html">ABOUT US</a></li> 
+                <li><a href="ContactUS.html">CONTACT US</a></li>     
+                <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
+                <button class="button_login"><a href="log.html">log-in</a></button>  
+            </ul>
+        </header>
+    </nav>
     <div class="order">
         <h1 class="order-text">Your Orders</h1>
     </div>
@@ -20,11 +34,9 @@
             <li>block Num:  23</li>
         </ul></p>
         <button>Check Out</button>
-       </div>
+    </div>
     <div class="order-content">
         <img src="https://th.bing.com/th/id/OIP.firJ6YUuNLUnDVBtB4WphQHaHa?cb=iwp1&rs=1&pid=ImgDetMain" alt="">
-
     </div>
-   
 </body>
 </html>
