--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
         <header class="navdiv">
             <div class="logo"><a href="#">Dream resturant</a></div> logo 
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">MENU</a></li>
-                <li><a href="#">PROFILE</a></li>    
-                <li><a href="#">ABOUT US</a></li> 
-                <li><a href="#">CONTACT US</a></li>     
+                <li><a href="HomePage.html">HOME</a></li>
+                <li><a href="menu.html">MENU</a></li>
+                <li><a href="Cart.html">CART</a></li>    
+                <li><a href="about.html">ABOUT US</a></li> 
+                <li><a href="ContactUS.html">CONTACT US</a></li>     
                 <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
                 <button class="button_login"><a href="log.html">log-in</a></button>  
             </ul>
@@ -38,9 +38,9 @@
                         <h1>About us</h1>
                     </div> 
                         <h4> We are a team of eight people who decided to create this page as our first step toward success.
-                          We wanted to start by opening a modest restaurant to meet people's needs. </h4>
-                          <h5>Team members:</h5>
-                          <ul>
+                            We wanted to start by opening a modest restaurant to meet people's needs. </h4>
+                            <h5>Team members:</h5>
+                            <ul>
                             <li>Abdallah Mohamed Essam</li><br>
                             <li>Ahmed Ayman Samhan</li><br>
                             <li>Abdallah Yehia Raheem</li><br>
@@ -49,7 +49,7 @@
                             <li>Mohamed Hussein Mohamed</li><br>
                             <li>Omar Tamer Mohamed</li><br>
                             <li>Mostafa Hamed Kamel</li><br>
-                          </ul>
+                            
                 </div>
             </div>
 
