--- a/log.html
+++ b/log.html
@@ -14,8 +14,8 @@
                 <div class="logo"><a href="HomePage.html">Dream resturant</a></div> <!-- logo -->
                 <ul>
                     <li><a href="HomePage.html">HOME</a></li>
-                    <li><a href="#">MENU</a></li>
-                    <li><a href="#">PROFILE</a></li>    
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="Cart.html">CART</a></li>    
                     <li><a href="about.html">ABOUT US</a></li> 
                     <li><a href="ContactUS.html">CONTACT US</a></li>     
                     <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
@@ -54,6 +54,6 @@
             <p>Create account?<a href="sign-up.html" class="sign-up">Sign up</a></p>
         </form>
     </div>
-
+    <script src="log.js"></script>
 </body>
 </html>
