--- a/HomePage.html
+++ b/HomePage.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="HomePage.html">HOME</a></li>
                 <li><a href="menu.html">MENU</a></li>
-                <li><a href="#">PROFILE</a></li>    
+                <li><a href="Cart.html">CART</a></li>    
                 <li><a href="about.html">ABOUT US</a></li> 
                 <li><a href="ContactUS.html">CONTACT US</a></li>     
                 <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
