--- a/HomePage.html
+++ b/HomePage.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar">
         <header class="navdiv">
-            <div class="logo"><a href="#">Dream resturant</a></div> <!-- logo -->
+            <div class="logo"><a href="HomePage.html">Dream resturant</a></div> <!-- logo -->
             <ul>
                 <li><a href="HomePage.html">HOME</a></li>
                 <li><a href="menu.html">MENU</a></li>
